feat: allow navigation

--- a/src/styles/Toolbar.less
+++ b/src/styles/Toolbar.less
@@ -1,8 +1,25 @@
 .rbc-calendar-toolbar {
   .grid {
     display: grid;
-    grid-template-columns: repeat(7, 1fr);
     grid-gap: 5px;
     text-align: center;
+
+    &.day-grid {
+      grid-template-columns: repeat(7, 1fr);
+    }
+
+    &.month-grid {
+      grid-template-columns: repeat(4, 1fr);
+    }
+
+    button {
+      &.active {
+        border-color: blue;
+      }
+
+      &.inactive {
+        color: grey;
+      }
+    }
   }
 }
